# ccr

./: Cargo.toml  README.md
crates/api-client/: Cargo.toml
crates/api-client/src/: client.rs  error.rs  integration.rs  lib.rs  oauth.rs  provider.rs  streaming.rs  tool_use.rs  types.rs
crates/claude-cli/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: compact.rs  context.rs  coordinator.rs  lib.rs  mcp.rs  memory.rs  prompt.rs  session.rs  state.rs
crates/tools/: Cargo.toml
crates/tools/src/: api_integration.rs  base.rs  command_tools.rs  cron_tools.rs  error.rs  file_tools.rs  git_tools.rs  lib.rs  lsp_tools.rs  message_tools.rs  permissions.rs  plan_tools.rs  registry.rs  search_tools.rs  skill_tools.rs  task_tools.rs  team_tools.rs  time_tools.rs  tool_search.rs  types.rs  user_tools.rs  web_tools.rs
src/: lib.rs  main.rs
src/commands/: builtin.rs  mod.rs  upgrade.rs
src/commands/git/: branch.rs  commit.rs  commit_push_pr.rs  diff.rs  mod.rs  pr_comments.rs  review.rs  security_review.rs
src/editor_compat/: common.rs  emacs.rs  jetbrains.rs  lsp.rs  mod.rs  vim.rs  vscode.rs
src/plugins/: lifecycle.rs  manager.rs  mod.rs  plugin.rs  security.rs  traits.rs
src/query/: engine.rs
src/skills/: discovery.rs  executor.rs  loader.rs  mod.rs  registry.rs  types.rs
src/tools/: mod.rs  skill_tools.rs
