[package]
name = "runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Claude Code Runtime - Session state management, context compression, MCP orchestration, prompt building"

[dependencies]
# Workspace依赖
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
uuid.workspace = true
chrono.workspace = true
once_cell.workspace = true
indexmap.workspace = true
config.workspace = true
toml.workspace = true

# 特定依赖
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
event-listener = "5.2"
lazy_static = "1.4"

# 其他Crate依赖
tools = { path = "../tools" }
api-client = { path = "../api-client", optional = true }

[features]
default = []
mcp-support = []

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"